@@ -10,6 +10,8 @@ xine-lib (1.1.90) (Unreleased)
   * Update libmpcdec (formerly libmusepack) to version 1.2.5 (newer than the
     previous Subversion snapshot) and contestually move it to contrib/libmpcdec
     to separate from xine's own code.
+  * Save plugins' cache in the defined cache home directory as per XDG Base
+    Directory Specification.
 
 xine-lib (1.1.6) [UNRELEASED]
   * Split the DirectFB plugin into X11 and non-X versions.
